--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,16 @@
 <html>
+  <style>
+    body{
+      text-align:center;
+      margin: 0 auto;
+      width:960px;
+      border:2px solid black;
+}
+  </style>
   <body>
-    Hello World
+    <h1>Section 1 - Methods of Proof and Algorithms</h1>
+    
+    <h1>Section 2 - Self-Explanation and Proof Reading</h1>
+    
   </body>
-  
-  <div>
-    jay testing here
-  </div>
 </html>
