--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,7 @@
 <html>
+  <head><script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-MML-AM_CHTML">
+</script></head>
   <style>
     body{
       margin: 0 auto;
@@ -16,6 +19,15 @@
   </style>
   
   <body>
+    
+    <!-- Math Jax -->
+    <p>When `a != 0`, there are two solutions to `ax^2 + bx + c = 0` and
+    they are</p>
+    <p style="text-align:center">
+      `x = (-b +- sqrt(b^2-4ac))/(2a) .`
+    </p>
+    
+    
     <h1>Section 1 - Methods of Proof and Algorithms</h1>
     <h3>(a) Make a summary of all methods of proof you learnt in this course so far. For each method highlight the advantages and disadvantages of the method and provide at least one example of proof using the method.</h3>
     
@@ -26,12 +38,27 @@
     Let x and y be some odd numbers,<br>
     thus  x = 2r+1 for some integer r <br>
     and y = 2t+1 for some integer t </h4>
-    <ol>
-    <li> x + y = (2r+1) + (2t+1) [By substitution]</li>
-    <li>       = 2r+2t + 1 + 1   [By removing parentheses]</li>
-    <li>       = 2(r + t + 1) [By associativity and commutatively]</li>
+    
+    <ol>PROOF:
+    <li> `x + y = (2r+1) + (2t+1) ` [By substitution]</li>
+    <li>     ` = 2r+2t + 1 + 1  ` [By removing parentheses]</li>
+    <li>      ` = 2(r + t + 1)` [By associativity and commutatively]</li>
     <li> Therefore x + y is even [By definition of even 2(t) for some integer t]</li>
     </ol>
+  
+    <h2>Proof by Contradiction</h2>
+    <h3>A proof by contradiction is a form of proof, and more specifically is a form of indirect proof, that establishes the truth or validity of a proposition. </h3>
+    <h4>Theorem:<br> Give a proof by contradiction of the statement:
+    "If `n^2` is an even integer then n is an even integer." </h4>
+  <ol>PROOF: suppose `n^2` is an even integer and n is not even, so that n is odd.
+    <br> Hence ` n = 2k + 1 ` for some integer k.
+    <li> `n^2 = (2k+1)^2 `</li>
+    <li> `=4k^2+4k+1` </li>
+    <li> `=2 * (2k^2 + 2k) + 1 `</li>
+    <li> `= 2t + 1 ` where `t = (2k^2+2k)`</li>
+  </ol>    
+    
+    
     
     <h1>Section 2 - Self-Explanation and Proof Reading</h1>
   </body>
