jay's stuff, started

--- a/views/cypher.ejs
+++ b/views/cypher.ejs
@@ -5,9 +5,36 @@
                  A summary of all the terminologies needed to understand your topic.
 
             </li>
+            
+            <div id="jay's summary block">
+                Array: a container of variable length, each value of an array is the same type of 
+                value. I.e all values are integers, all values are words, etc.
+                
+                Index: used to indicate the specific container (and it's value)
+                of an array. The first element of an array has an index of 1 (or 0 depending on
+                the standard).
+                
+                
+                
+            </div>
+            
             <li> An overview of your program, the algorithms you are using and explanation of the main
 idea.
 </li>
+
+            <div id="jay's overview block">
+                A caesar cipher uses the existing letters of a language and creates an encripytion
+                by shifting the index value of the alphabet. In English, the letter 'A' would have the
+                index of 1 (or 0) since it's the first letter in the alphabet. Shifting the alphabet
+                to the right 3 would make the letter 'D' have the index of 1.
+                
+                Decoding is done by shifting the index value of the alphabet in the opposite direction
+                of the encripytion shift. If the letter 'D' is index 1, shifting the alphabet left 3 
+                would return the letter 'A' to index value 1.
+                
+                
+            </div>
+
 <li> A description of how to use the program.
 </li>
 <li> You must submit the code for the program and an executable link so others can play with
