--- a/views/cypher.ejs
+++ b/views/cypher.ejs
@@ -14,6 +14,11 @@
                 of an array. The first element of an array has an index of 1 (or 0 depending on
                 the standard).
                 
+                Modulus: the number left over after an interger division occurs. Divisible numbers
+                that are factors will leave a remainder of 0.
+                ex: 30 / 3 = 10 remainder 0
+                    16 / 5 = 3 remainder 1
+                
                 
                 
             </div>
@@ -25,13 +30,21 @@ idea.
             <div id="jay's overview block">
                 A caesar cipher uses the existing letters of a language and creates an encripytion
                 by shifting the index value of the alphabet. In English, the letter 'A' would have the
-                index of 1 (or 0) since it's the first letter in the alphabet. Shifting the alphabet
+                index of 1 since it's the first letter in the alphabet. Shifting the alphabet
                 to the right 3 would make the letter 'D' have the index of 1.
                 
                 Decoding is done by shifting the index value of the alphabet in the opposite direction
                 of the encripytion shift. If the letter 'D' is index 1, shifting the alphabet left 3 
-                would return the letter 'A' to index value 1.
+                would return the letter 'A' to index value 1. Returning the word to a readable format.
                 
+                Mathmatically this can be noted as:
+                f(x) = (x + k) mod (a)
+                where 'x' represents the letter being encrypted
+                      'k' represents the number of letters being shifted
+                      'a' represents the length of the alphabet being used 
+                
+                So using the english letter 'A' (index 1) shifting 3 right it would look like:
+                f('A') = (1 + 3) mod (26)
                 
             </div>
 
