--- a/views/cypher.ejs
+++ b/views/cypher.ejs
@@ -1,20 +1,87 @@
 <html>
     <body>
-        <ol>
-            <li>
-                 A summary of all the terminologies needed to understand your topic.
 
-            </li>
-            <li> An overview of your program, the algorithms you are using and explanation of the main
-idea.
-</li>
-<li> A description of how to use the program.
-</li>
-<li> You must submit the code for the program and an executable link so others can play with
-your program.
-</li><li> A bibliography that cites any resources you used including the textbook with proper citations.</li>
+
+        <ol>
+        <li>
+        A summary of all the terminologies needed to understand your topic.
+        </li>
+        <li> An overview of your program, the algorithms you are using and explanation of the main
+        idea.
+        </li>
+        <li> A description of how to use the program.
+        </li>
+        <li> You must submit the code for the program and an executable link so others can play with your program.</li>
+        <li> A bibliography that cites any resources you used including the textbook with proper citations.</li>
         </ol>
         
+        <form action="#" method="get" onsubmit="return false;">
+	<table class="noborder">
+		<tbody>
+			<tr>
+				<td><label for="text">Text:</label></td>
+				<td><textarea id="text" cols="50" rows="10" style="width:40em; height:15em">THE QUICK BROWN FOX JUMPED OVER THE LAZY DOG.</textarea></td>
+			</tr>
+			<tr>
+				<td><label for="shift">Shift:</label></td>
+				<td><input type="text" id="shift" value="13" style="width:4em;"/></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td>
+					<input type="button" value="Encrypt" onclick="doCrypt(false);"/>
+					<input type="button" value="Decrypt" onclick="doCrypt(true);"/>
+				</td>
+			</tr>
+		</tbody>
+	</table>
+</form>
+    <script>
+
+
+        "use strict";
+        
+        function doCrypt(isDecrypt) {
+        	var shiftText = document.getElementById("shift").value;
+        	if (!/^-?\d+$/.test(shiftText)) {
+        		alert("Shift is not an integer");
+        		return;
+        	}
+        	var shift = parseInt(shiftText, 10);
+        	if (shift < 0 || shift >= 26) {
+        		alert("Shift is out of range");
+        		return;
+        	}
+        	if (isDecrypt)
+        		shift = (26 - shift) % 26;
+        	var textElem = document.getElementById("text");
+        	textElem.value = caesarShift(textElem.value, shift);
+        }
+        
+        
+        /* 
+         * Returns the result of having each alphabetic letter of the given text string shifted forward
+         * by the given amount, with wraparound. Case is preserved, and non-letters are unchanged.
+         * Examples:
+         * - caesarShift("abz",  0) = "abz".
+         * - caesarShift("abz",  1) = "bca".
+         * - caesarShift("abz", 25) = "zay".
+         * - caesarShift("THe 123 !@#$", 13) = "GUr 123 !@#$".
+         */
+        function caesarShift(text, shift) {
+        	var result = "";
+        	for (var i = 0; i < text.length; i++) {
+        		var c = text.charCodeAt(i);
+        		if      (65 <= c && c <=  90) result += String.fromCharCode((c - 65 + shift) % 26 + 65);  // Uppercase
+        		else if (97 <= c && c <= 122) result += String.fromCharCode((c - 97 + shift) % 26 + 97);  // Lowercase
+        		else                          result += text.charAt(i);  // Copy
+        	}
+        	return result;
+        }
+
+        </script>
+      
+    
         
     </body>
     
