--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,6 +35,7 @@
     color:red;
   }
   #cipherStyle{
+    color:green;
     
   }
 
@@ -52,9 +53,15 @@
     -->
   
   <div class="jumbotron">
-  <div class="display-3">Discrete Mathematics Project 2</div>
-</div><h1>
-    <a id="cipherStyle" href="/cipher">Cesars Cipher (Click ME)</a></h1>
+  <div class="display-3">Discrete Mathematics Project</div>
+  
+</div>
+
+
+
+<h1>Project Part 3:</h1>
+<h3>
+    <a id="cipherStyle" href="/cipher">Cesars Cipher (Click ME)</a></h3>
   <h1>Section 1 - Methods of Proof and Algorithms</h1>
   <h3>(a) Make a summary of all methods of proofs you have learned in this course so far. For each method highlight the advantages and disadvantages of the method and provide at least one example of proof using the method.</h3>
   <hr>
