--- a/views/cipher.ejs
+++ b/views/cipher.ejs
@@ -37,14 +37,16 @@ your program.
         
             <div id="jay's overview block">
             <h1>Overview</h1>
-              <h4>A caesar cipher uses the existing letters of a language and creates an encripytion
+              <h4>A caesar cipher uses the existing letters of a language and creates an encryption
                 by shifting the index value of the alphabet. In English, the letter 'A' would have the
                 index of 1 since it's the first letter in the alphabet. Shifting the alphabet
-                to the right 3 would make the letter 'D' have the index of 1.</h4>
+                to the right 3 would make the letter 'D' have the index of 1. Another example of a shift would be
+                a shift of 7 to the right, the letter associated with that shift would be 'H'</h4>
                 
                <h4> Decoding is done by shifting the index value of the alphabet in the opposite direction
                 of the encripytion shift. If the letter 'D' is index 1, shifting the alphabet left 3 
-                would return the letter 'A' to index value 1. Returning the word to a readable format.</h4>
+                would return the letter 'A' to index value 1. Returning the word to a readable format. So essentially the do the opposite
+                , you encrypt it with a shift of 7 to the right, to decrypt you go left 7 to find out what the letter really is.</h4>
                 <h4>
                 Mathmatically this can be noted as:
                 `f(x) = (x + k) mod (a)`
@@ -57,6 +59,14 @@ your program.
                 </h4>
                 <a href="http://practicalcryptography.com/ciphers/caesar-cipher/"></a>
             </div>
+            
+            <div id="Joels block">
+                <h1>Bibliography</h1>
+                <h4>YouTube, YouTube, www.youtube.com/embed/sMOZf4GN3oc.Copy & paste citation</h4>
+                <h4>“Crypto.” Practical Cryptography, practicalcryptography.com/ciphers/caesar-cipher/.</h4>
+                  
+            </div>
+      
             
             <div id="howtouseBlock">
                 <h1>How to Use</h1>
